# ufbx-python

./: .gitignore  BUILD_PROCESS.md  DIRECTORY_STRUCTURE.md  MANIFEST.in  PHASE1_COMPLETE.md  README.md  build.sh  pyproject.toml  setup.py  sfs.py  test_api_demo.py  test_real_fbx.py  test_type_hints.py
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
bindgen/: generate_python.py  parsette.py  ufbx_ir.py  ufbx_parser.py
docs/: API.md  PUBLISHING.md
examples/: basic_usage.py  test_cython_basic.py  test_fbx.py
tests/: test_animation_deformers.py  test_api_demo.py  test_axes.py  test_basic.py  test_comprehensive.py  test_new_api.py  test_phase1_features.py  test_real_fbx.py  test_type_hints.py
tests/data/: README.md
tests/fixtures/: README.md
ufbx/: __init__.py  __init__.pyi  _ufbx.pyx  _ufbx_build.py  core.py  core.pyi  errors.py  errors.pyi  setup.py
ufbx/src/: ufbx_wrapper.c  ufbx_wrapper.h
